# promto_landing_generator

./: .env.example  .git-trigger  .gitignore  CONVENTIONS.md  README.md  docker-compose.dev.yml  docker-compose.yml  netlify.toml  next.config.ts  package-lock.json  package.json  render.yaml  server.js
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: auth.py  categories.py  health.py  landings.py  public.py  settings.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py
backend/app/models/: __init__.py  category.py  landing.py  redirect.py  settings.py  user.py
backend/app/schemas/: category.py  content.py  landing.py  public.py  settings.py  user.py
backend/app/services/: auth.py  slug.py
backend/scripts/: create_admin.py  fix_promto_in_faq.py  fix_promto_text.py  generate_content.py  generate_en_content.py  import_from_excel.py  load_landings_content.py  reset_admin.py  seed_data.py  seed_landings_structure.py  update_cta_text.py
backend/tests/: conftest.py  test_auth.py  test_categories.py  test_health.py  test_landings.py  test_public.py  test_settings.py
docs/: project-overview.md  Общие seo требования при разработке сайта promto.ai (30.03.26).md  Структура Промто.xlsx  ТЗ дизайнеру promto.ai (07.04.26).md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
public/: _redirects  google_REPLACE_WITH_CODE.html  manifest.json  yandex_3cf16ac5be06b534.html  yandex_REPLACE_WITH_CODE.html  (+1 more)
(+260 files in other folders)
